[project]
name = "01-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "ta-lib",
    "yfinance>=0.2.53",
]

[tool.uv.sources]
ta-lib = { path = "ta_lib-0.6.3-cp310-cp310-win_amd64.whl" }
